@@ -6,6 +6,8 @@ PHP                                                                        NEWS
   . Fix inconsistent float negation in constant expressions. (ilutov)
   . Fixed bug GH-8841 (php-cli core dump calling a badly formed function).
     (nielsdos)
+  . Fixed bug GH-10085 (Assertion when adding two arrays with += where the first
+    array is contained in the second). (ilutov)
 
 - DOM:
   . Fixed bug #80602 (Segfault when using DOMChildNode::before()).
